welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:1: error: Missing closing brace `}' assumed here
def icyHot(a:Int, b:Int):Boolean = {
^